--- a/authenticationService/src/main/resources/application.properties
+++ b/authenticationService/src/main/resources/application.properties
@@ -1,7 +1,7 @@
+server.port=8082
 spring.data.mongodb.authentication-database=admin
 spring.data.mongodb.username=myUserAdmin
 spring.data.mongodb.password=abc123
+spring.data.mongodb.database=authDB
+spring.data.mongodb.port=27017
 spring.data.mongodb.host=localhost
-spring.data.mongodb.port = 27017
-spring.data.mongodb.database= DislinktDB
-server.port=8082
